--- a/package.json
+++ b/package.json
@@ -5,26 +5,37 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.0.2",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "@mui/styled-engine-sc": "^6.0.2",
+    "@mui/x-date-pickers": "^7.20.0",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "postcss-loader": "^8.1.1",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "resolve-url-loader": "^5.0.0",
+    "rsuite": "^5.73.1",
     "sass": "^1.78.0",
     "styled-components": "^6.1.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
